--- a/views/newUser.pug
+++ b/views/newUser.pug
@@ -7,11 +7,13 @@ html(lang="en")
         title Create User
     body
         h1 Create New User 
-        form(action="/view" name="/view" method="post")
-            h3 Name 
-            input#name(type="text" placeholder="Name" name="username")
+        form(action="/user" name="/user" method="post")
+            h3 First Name 
+            input#name(type="text" placeholder="first name" name="fname")
+            h3 Last Name
+            input#name(type="text" placeholder="last name" name="lname")
             h3 Age 
-            input#age(type="number" name="age")
+            input#age(type="numbe" value='18' name="age")
             h3 Email 
             input#email(type="text" placeholder="email@example.com" name="email")
             div
