--- a/views/users.pug
+++ b/views/users.pug
@@ -10,6 +10,7 @@ html
                 h2 #{val.firstName} #{val.lastName}
                 h3 Age: #{val.age}
                 h3 Email: #{val.email} 
+                a(href="/delete/"+val._id) Delete
             
             
             
