--- a/views/users.pug
+++ b/views/users.pug
@@ -2,15 +2,24 @@ doctype
 html
     head
         title= pageTitle
-        link(href="/style.css")
+        link(rel="stylesheet" href="./style.css" type="text/css")
     body 
+        div.nav
+            a(href="/") Make New User
         h1= pageTitle
+        form(action="searching" method="post")  
+            input(type="text" name="search")
+            input(type="submit", value="Search")
         each val in users
-            div(class="userClass") 
+            div.userClass 
                 h2 #{val.firstName} #{val.lastName}
                 h3 Age: #{val.age}
-                h3 Email: #{val.email} 
-                a(href="/delete/"+val._id) Delete
+                h3 Email: #{val.email}
+                div
+                    a(href="/edit/" +val._id) Edit
+                div 
+                    a(href="/delete/"+val._id) Delete
+                span ----------------------------------
             
             
             
